--- a/server/Testing.ipynb
+++ b/server/Testing.ipynb
@@ -53,7 +53,6 @@
     "    shuffled = indexes + fakes\n",
     "    random.shuffle(shuffled)\n",
     "    vectors = get_word_vectors(shuffled)\n",
-    "    vec_sum = sum(np.array(vectors[i]) for i in indexes).tolist()\n",
     "    return vec_sum"
    ]
   },
@@ -66,8 +65,10 @@
     "spams = [\n",
     "    'Want to see my nudes? meet me at http://www.rounds.com. see you around!',\n",
     "    'come see me on camera just add your credit card http://getsomenudes.com',\n",
-    "    'free pics and live video come here bit.ly/ERERERERE'\n",
+    "    'free pics and live video come here bit.ly/ERERERERE',\n",
+    "    'Hi are you looking for a sexy cool woman to spend time ,with well I,m lookin for a gentleman who still khowns how to treat a lady, I am here to u.http . G.lovendate.pw code: 605',\n",
     "]\n",
+    "\n",
     "good = [\n",
     "    'Hi I am your mother and I love you',\n",
     "    'Did you watch the movie last night?',\n",
@@ -107,8 +108,7 @@
     "# register spam messages\n",
     "for msg in spams:\n",
     "    for i in range(4):\n",
-    "        report_spam_message(msg)\n",
-    "\n"
+    "        report_spam_message(msg)"
    ]
   },
   {
@@ -142,22 +142,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(False, 0.9627453035194151)"
+       "(False, 0.98357697536685)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_spam_message('Want to eat some cake? meet me at the coff. see you there!')"
+    "is_spam_message('Want to eat some cake? meet me at the cafe. see you there!')"
    ]
   }
  ],
