change report to post

--- a/server/Testing.ipynb
+++ b/server/Testing.ipynb
@@ -9,10 +9,9 @@
     "import requests\n",
     "BASE_URL = 'http://localhost:5000'\n",
     "\n",
-    "def report(msg, vector):\n",
-    "    requests.get(BASE_URL + '/spam/report',\n",
-    "             json={'vector': vector,\n",
-    "                   'message': msg}\n",
+    "def report(msg):\n",
+    "    requests.post(BASE_URL + '/spam/report',\n",
+    "             json={'message': msg}\n",
     "            ).ok\n",
     "\n",
     "def is_spam(vector):\n",
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +44,8 @@
     "    import random\n",
     "    import numpy as np\n",
     "    \n",
+    "    message = message.lower()\n",
+    "    \n",
     "    indexes = [WORD_INDEXES[word] \n",
     "               for word in message.split(' ')\n",
     "               if word in WORD_INDEXES]\n",
@@ -53,20 +54,32 @@
     "    shuffled = indexes + fakes\n",
     "    random.shuffle(shuffled)\n",
     "    vectors = get_word_vectors(shuffled)\n",
+    "    \n",
+    "    vec_sum = sum(np.array(vectors[i]) for i in indexes).tolist()\n",
+    "\n",
     "    return vec_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_spam_message(msg):\n",
+    "    return is_spam(calc_message(msg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "spams = [\n",
-    "    'Want to see my nudes? meet me at http://www.rounds.com. see you around!',\n",
-    "    'come see me on camera just add your credit card http://getsomenudes.com',\n",
-    "    'free pics and live video come here bit.ly/ERERERERE',\n",
     "    'Hi are you looking for a sexy cool woman to spend time ,with well I,m lookin for a gentleman who still khowns how to treat a lady, I am here to u.http . G.lovendate.pw code: 605',\n",
+    "    'I offer you an exchange, you free register on my site http:\\/\\/rachelmel.pro\\nConfirmation email and show me the screenshot. \\nAfter that I\\'ll send you my nude pics',\n",
+    "    '''Hi, do I know u? you just showed up in my kik hmm.. my friends warned me that there are many fake accounts and bots here, no offense, are u a real person? If you are a real person, you won't have any trouble liking my pic, will you;)? the one where I'm wearing a white swimming suit. This way I'll be convinced that you are real'''\n",
     "]\n",
     "\n",
     "good = [\n",
@@ -78,87 +91,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_spam_message(msg):\n",
-    "    return is_spam(calc_message(msg))\n",
-    "def report_spam_message(msg):\n",
-    "    report(msg, calc_message(msg))"
+    "# register spam messages\n",
+    "for msg in spams:\n",
+    "    for i in range(4):\n",
+    "        report(msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(False, 0.9036066533202494)"
+       "(False, 0.8641516840020381)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# register spam messages\n",
-    "for msg in spams:\n",
-    "    for i in range(4):\n",
-    "        report_spam_message(msg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "is_spam_message(good[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(True, 1.0000000000000004)"
+       "(True, 1.0)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_spam_message(spams[2])"
+    "is_spam_message(spams[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(False, 0.98357697536685)"
+       "(False, 0.6815927618764492)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_spam_message('Want to eat some cake? meet me at the cafe. see you there!')"
+    "is_spam_message('Hey Doody What is up?')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hi', 'do', 'I', 'know', 'u', 'you', 'just', 'showed', 'up', 'in', 'my', 'kik', 'hmm', 'my', 'friends', 'warned', 'me', 'that', 'there', 'are', 'many', 'fake', 'accounts', 'and', 'bots', 'here', 'no', 'offense', 'are', 'u', 'a', 'real', 'person', 'If', 'you', 'are', 'a', 'real', 'person', 'you', \"won't\", 'have', 'any', 'trouble', 'liking', 'my', 'pic', 'will', 'you;)', 'the', 'one', 'where', \"I'm\", 'wearing', 'a', 'white', 'swimming', 'suit', 'This', 'way', \"I'll\", 'be', 'convinced', 'that', 'you', 'are', 'real']\n"
+     ]
+    }
+   ],
+   "source": [
+    ">>> import re\n",
+    ">>> string = spams[2]\n",
+    ">>> pattern = re.compile(\"^\\s+|\\s*[, \\.\\?]\\s*|\\s+$\")\n",
+    ">>> print([x for x in pattern.split(string) if x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
